tests/ui/traits/const-traits/super-traits-fail-3.ynn.stderr
error: `[const]` is not allowed here
  --> $DIR/super-traits-fail-3.rs:27:44
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] trait Bar: [const] Foo {}
   |                                            ^^^^^^^
   |
note: this trait is not `const`, so it cannot have `[const]` trait bounds
  --> $DIR/super-traits-fail-3.rs:27:33
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] trait Bar: [const] Foo {}
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:27:44
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] trait Bar: [const] Foo {}
   |                                            ^^^^^^^ can't be applied to `Foo`
   |
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:27:44
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] trait Bar: [const] Foo {}
   |                                            ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:27:44
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] trait Bar: [const] Foo {}
   |                                            ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:34:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
help: mark `Bar` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] const trait Bar: [const] Foo {}
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:34:17
   |
LL | const fn foo<T: [const] Bar>(x: &T) {
   |                 ^^^^^^^ can't be applied to `Bar`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Bar` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yyn, ynn, nyn, nnn))] const trait Bar: [const] Foo {}
   |                                 +++++

error[E0015]: cannot call non-const method `<T as Foo>::a` in constant functions
  --> $DIR/super-traits-fail-3.rs:38:7
   |
LL |     x.a();
   |       ^^^
   |
note: method `a` is not const because trait `Foo` is not const
  --> $DIR/super-traits-fail-3.rs:17:33
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] trait Foo { fn a(&self); }
   |                                 ^^^^^^^^^   ------------ this method is not const
   |                                 |
   |                                 this trait is not const
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider making trait `Foo` const
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0015`.
